# ocr-examples

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: debug.yaml  docling.yaml  docling_llm.yaml  doctr.yaml  doctr_llm.yaml  vlm.yaml
ocrit/: debug.py  docling.py  doctr.py  document.py  evaluate.py  generator.py  llm.py  pipeline.py  schema.py  vlm.py
ocrit/schemas/: business.py
scripts/: create_images.py  create_schema.py  run_pipeline.py
tests/ocrit/: test_generator.py  test_schema.py
tests/ocrit/schemas/: test_business.py
